[package]
name = "hyperpipe"
description = "A very simple FIFO data pipe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"

[workspace]
members = [
  ".",
  "async-hyperpipe"
]